--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -140,10 +140,10 @@ spec:
               memory: 1Gi
           volumeMounts:
             - name: prometheus-config-volume
-              mountPath: /tmp//prometheus.yml
+              mountPath: /tmp/
               subPath: prometheus.yaml
             - name: prometheus-conf-checker
-              mountPath: /tmp/check.sh.src
+              mountPath: /tmp/
               subPath: check.sh
       volumes:
         - name: prometheus-config-volume
