--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -141,8 +141,10 @@ spec:
           volumeMounts:
             - name: prometheus-config-volume
               mountPath: /tmp/prometheus.yaml
+              subpath: prometheus.yaml
             - name: prometheus-conf-script
               mountPath: /tmp/check.sh
+              subpath: check.sh
       volumes:
         - name: prometheus-config-volume
           configMap:
