--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -74,7 +74,7 @@ spec:
           image: prom/prometheus:v2.40.5
           args:
             - "--storage.tsdb.retention.time=180d"
-            - "--config.file=/etc/prometheus/prometheus.yml"
+            - "--config.file=/etc/prometheus/prometheus.yml/prometheus.yaml"
             - "--storage.tsdb.path=/prometheus/"
             - "--web.enable-lifecycle"
           ports:
@@ -89,7 +89,6 @@ spec:
           volumeMounts:
             - name: prometheus-config-volume
               mountPath: /etc/prometheus/prometheus.yml
-              subPath: prometheus.yaml
             - name: prometheus-storage-volume
               mountPath: /prometheus/
       initContainers:
