--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -134,8 +134,8 @@ spec:
               cpu: 100m
               memory: 10Mi
             limits:
-              cpu: 100m
-              memory: 20Mi
+              cpu: 1
+              memory: 200Mi
           volumeMounts:
             - name: prometheus-config-volume
               mountPath: /tmp/prometheus.yaml
