--- a/yopass/redis/deployment.yaml
+++ b/yopass/redis/deployment.yaml
@@ -11,6 +11,11 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/name: yopass-redis
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+    type: RollingUpdate
     spec:
       containers:
       - name: yopass-redis
