--- a/ts3bot/deployment.yaml
+++ b/ts3bot/deployment.yaml
@@ -10,9 +10,11 @@ spec:
   template:
     metadata:
       annotations:
-        another-autoscaler/start-time: "00 21 * * 4"
+#        another-autoscaler/start-time: "00 21 * * 4"
+        another-autoscaler/start-time: "43 21 * * * "
         another-autoscaler/start-replicas: "1"
-        another-autoscaler/stop-time: "0 2 * * 5"
+#        another-autoscaler/stop-time: "0 2 * * 5"
+        another-autoscaler/stop-time: "45 21 * * *"
         another-autoscaler/stop-replicas: "0"
       labels:
         app.kubernetes.io/name: ts3bot
