try this zabbix thing

--- a/monitoring/kustomization.yaml
+++ b/monitoring/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 
   - deployment.yaml
   - service/service.yaml
+  - zabbix/deployment.yaml
 
 configMapGenerator:
   - name: script-exporter-config
