--- a/monitoring/zabbix-web/deployment.yaml
+++ b/monitoring/zabbix-web/deployment.yaml
@@ -28,7 +28,8 @@ spec:
         - name: zabbix-web
           image: zabbix/zabbix-web-nginx-pgsql:6.0.17-alpine
           ports:
-          - containerPort: 8080
+          - name: http
+            containerPort: 8080
           resources:
             limits:
               cpu: "1"
