--- a/monitoring/zabbix-web/deployment.yaml
+++ b/monitoring/zabbix-web/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             topologyKey: "kubernetes.io/hostname"
       containers:
         - name: zabbix-web
-          image: zabbix/zabbix-web-nginx-pgsql:5.0.34-alpine
+          image: zabbix/zabbix-web-nginx-pgsql:6.0.8-alpine
           ports:
           - name: http
             containerPort: 8080
@@ -50,4 +50,6 @@ spec:
             value: "zabbix"
           - name: POSTGRES_PASSWORD
             value: "zabbix"
+          - name: POSTGRES_USE_IMPLICIT_SEARCH_PATH
+            value: "true"
   revisionHistoryLimit: 1
