--- a/monitoring/zabbix-server/deployment.yaml
+++ b/monitoring/zabbix-server/deployment.yaml
@@ -52,12 +52,10 @@ spec:
           value: "192.168.103.10"
         - name: DB_SERVER_PORT
           value: "5000"
-#            - name: POSTGRES_USER
-#              value: zabbix
-#            - name: POSTGRES_PASSWORD
-#              value: zabbix
-#            - name: MYSQL_DATABASE
-#              value: "zabbix"
+        - name: POSTGRES_USER
+          value: zabbix
+        - name: POSTGRES_PASSWORD
+          value: zabbix
         - name: ZBX_CACHESIZE
           value: "1024M"
         - name: ZBX_TRENDCACHESIZE
