--- a/monitoring/zabbix-web/deployment.yaml
+++ b/monitoring/zabbix-web/deployment.yaml
@@ -49,4 +49,5 @@ spec:
           - name: POSTGRES_USER
             value: "zabbix"
           - name: POSTGRES_PASSWORD
+            value: "zabbix"
   revisionHistoryLimit: 1
