adjust some values

--- a/monitoring/zabbix_values.yaml
+++ b/monitoring/zabbix_values.yaml
@@ -30,9 +30,9 @@ zabbixProxy:
   resources: {}
   image:
     ## Zabbix proxy Docker image name
-    repository: zabbix/zabbix-proxy-sqlite3
+#    repository: zabbix/zabbix-proxy-sqlite3
     ## Tag of Docker image of Zabbix proxy
-    tag: alpine-6.0.17
+#    tag: alpine-6.0.17
     pullPolicy: IfNotPresent
     ## List of dockerconfig secrets names to use when pulling images
     pullSecrets: []
@@ -159,12 +159,12 @@ zabbixAgent:
   ## Enables use of Zabbix agent
   enabled: true
   resources: {}
-      ##  requests:
-      ##   cpu: 100m
-      ##   memory: 54Mi
-      ##  limits:
-      ##   cpu: 100m
-      ##   memory: 54Mi
+  requests:
+    cpu: 100m
+    memory: 54Mi
+  limits:
+    cpu: 100m
+    memory: 54Mi
 
   securityContext: {}
     # fsGroup: 65534
@@ -200,9 +200,9 @@ zabbixAgent:
   ##    mountPropagation: None|HostToContainer|Bidirectional
   image:
     ## Zabbix agent Docker image name
-    repository: zabbix/zabbix-agent2
+#    repository: zabbix/zabbix-agent2
     ## Tag of Docker image of Zabbix agent
-    tag: alpine-6.0.17
+#    tag: alpine-6.0.17
     pullPolicy: IfNotPresent
     ## List of dockerconfig secrets names to use when pulling images
     pullSecrets: []
