--- a/mail/postfixadmin/deployment.yaml
+++ b/mail/postfixadmin/deployment.yaml
@@ -29,6 +29,6 @@ spec:
               memory: 512M
           envFrom:
           - secretRef:
-              - name: postfixadmindb
-              - name: setuppw
+              name: postfixadmindb
+              name: setuppw
   revisionHistoryLimit: 1
