this is apparently the way

--- a/mail/postfixadmin/deployment.yaml
+++ b/mail/postfixadmin/deployment.yaml
@@ -30,5 +30,6 @@ spec:
           envFrom:
           - secretRef:
               name: postfixadmindb
+          - secretRef:
               name: setuppw
   revisionHistoryLimit: 1
