--- a/monitoring/exporters/pgbouncer-exporter/deployment.yaml
+++ b/monitoring/exporters/pgbouncer-exporter/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       - name: pgbouncer-exporter
         image: prometheuscommunity/pgbouncer-exporter:v0.6.0
         args:
-         - "--pgBouncer.connectionString="&(ARG)/pgbouncer?sslmode=disable""
+         - "--pgBouncer.connectionString="$(ARG)/pgbouncer?sslmode=disable""
         ports:
         - name: http
           containerPort: 9127
