--- a/monitoring/exporters/pgbouncer-exporter/deployment.yaml
+++ b/monitoring/exporters/pgbouncer-exporter/deployment.yaml
@@ -15,7 +15,8 @@ spec:
       containers:
       - name: pgbouncer-exporter
         image: prometheuscommunity/pgbouncer-exporter:v0.6.0
-#        args: ["--pgBouncer.connectionString="$(ARG)/pgbouncer?sslmode=disable""]
+        args: 
+        - "--pgBouncer.connectionString=$(ARG)/pgbouncer?sslmode=disable"
         ports:
         - name: http
           containerPort: 9127
