--- a/monitoring/exporters/pgbouncer-exporter/deployment.yaml
+++ b/monitoring/exporters/pgbouncer-exporter/deployment.yaml
@@ -15,8 +15,10 @@ spec:
       containers:
       - name: pgbouncer-exporter
         image: prometheuscommunity/pgbouncer-exporter:v0.6.0
+        command: [ "/bin/sh", "-c", "--" ]
         args: 
-        - "--pgBouncer.connectionString=$(PG_USER)&$(PG_HOST)/pgbouncer?sslmode=disable"
+#        - "--pgBouncer.connectionString=$(PG_USER)&$(PG_HOST)/pgbouncer?sslmode=disable"
+        - "while true; do sleep 30; done" 
         ports:
         - name: http
           containerPort: 9127
