--- a/monitoring/exporters/pgbouncer-exporter/deployment.yaml
+++ b/monitoring/exporters/pgbouncer-exporter/deployment.yaml
@@ -17,7 +17,8 @@ spec:
         image: prometheuscommunity/pgbouncer-exporter:v0.6.0
 #        command: [ "/bin/sh", "-c", "--" ]
         args: 
-        - "--pgBouncer.connectionString=postgres://$(PG_USER)@192.168.103.10:6543/pgbouncer?sslmode=disable"
+#        - "--pgBouncer.connectionString=postgres://$(PG_USER)@192.168.103.10:6543/pgbouncer?sslmode=disable"
+        - "--pgBouncer.connectionString=postgres://$(PG_ARG)/pgbouncer?sslmode=disable"
 #        - "while true; do sleep 30; done" 
         ports:
         - name: http
