--- a/monitoring/exporters/pgbouncer-exporter/deployment.yaml
+++ b/monitoring/exporters/pgbouncer-exporter/deployment.yaml
@@ -1,22 +1,92 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pgbouncer-exporter
+  name: pgbouncer-exporter-01
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: pgbouncer-exporter
+      app.kubernetes.io/name: pgbouncer-exporter-01
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: pgbouncer-exporter
+        app.kubernetes.io/name: pgbouncer-exporter-01
     spec:
       containers:
-      - name: pgbouncer-exporter
+      - name: pgbouncer-exporter-01
         image: prometheuscommunity/pgbouncer-exporter:v0.6.0
         args: 
-        - "--pgBouncer.connectionString=postgres://$(PG_USER)@192.168.103.10:6432/pgbouncer?sslmode=disable"
+        - "--pgBouncer.connectionString=postgres://$(PG_USER)@192.168.103.11:6432/pgbouncer?sslmode=disable"
+        ports:
+        - name: http
+          containerPort: 9127
+        envFrom:
+        - secretRef:
+            name: pgbouncer-secret
+        resources: 
+          limits:
+            cpu: 100m
+            memory: 50Mi
+          requests:
+            cpu: 100m
+            memory: 50Mi
+      restartPolicy: Always
+  revisionHistoryLimit: 1
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: pgbouncer-exporter-02
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: pgbouncer-exporter-02
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: pgbouncer-exporter-02
+    spec:
+      containers:
+      - name: pgbouncer-exporter-02
+        image: prometheuscommunity/pgbouncer-exporter:v0.6.0
+        args: 
+        - "--pgBouncer.connectionString=postgres://$(PG_USER)@192.168.103.12:6432/pgbouncer?sslmode=disable"
+        ports:
+        - name: http
+          containerPort: 9127
+        envFrom:
+        - secretRef:
+            name: pgbouncer-secret
+        resources: 
+          limits:
+            cpu: 100m
+            memory: 50Mi
+          requests:
+            cpu: 100m
+            memory: 50Mi
+      restartPolicy: Always
+  revisionHistoryLimit: 1
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: pgbouncer-exporter-03
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: pgbouncer-exporter-03
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: pgbouncer-exporter-03
+    spec:
+      containers:
+      - name: pgbouncer-exporter-03
+        image: prometheuscommunity/pgbouncer-exporter:v0.6.0
+        args: 
+        - "--pgBouncer.connectionString=postgres://$(PG_USER)@192.168.103.13:6432/pgbouncer?sslmode=disable"
         ports:
         - name: http
           containerPort: 9127
